[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/mononoki-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://tools/edig/eDIG.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=3]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 96
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 80
font_data = ExtResource( 1 )

[node name="eDIG" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.12549, 0.12549, 1 )

[node name="DiceRollerBanner" type="ColorRect" parent="."]
anchor_bottom = 0.212
margin_left = 40.0
margin_top = 105.0
margin_right = 1040.0
margin_bottom = -298.8
color = Color( 0.368627, 0, 0, 1 )

[node name="LabelDiceRoller" type="Label" parent="DiceRollerBanner"]
anchor_top = 0.0142232
anchor_bottom = 0.0142232
margin_top = -1.49344
margin_right = 1000.0
margin_bottom = 107.507
custom_fonts/font = SubResource( 3 )
text = "Dwarven Insult Generator"
align = 1
valign = 1

[node name="Label" type="Label" parent="DiceRollerBanner"]
margin_left = -11.0
margin_top = -26.0
margin_right = 286.0
margin_bottom = 29.0
rect_rotation = -6.6
custom_fonts/font = SubResource( 4 )
text = "exponential"

[node name="ButtonGenerate" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -235.0
margin_bottom = -120.0
custom_fonts/font = SubResource( 2 )
text = "THIS WILL TAKE 2aaa"

[node name="LabelStart" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_top = 240.0
margin_right = -4.0
margin_bottom = 345.0
custom_fonts/bold_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[b][color=#999999]\"YOU"
text = "\"YOU"
scroll_active = false

[node name="LabelEnd" type="RichTextLabel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -349.0
margin_bottom = -240.0
custom_fonts/bold_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[b][right][color=#999999]!\""
text = "!\""
scroll_active = false

[node name="LabelMiddle" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 49.0
margin_top = 241.0
margin_right = -47.0
margin_bottom = -377.0
custom_fonts/bold_font = SubResource( 5 )
bbcode_enabled = true

[connection signal="pressed" from="ButtonGenerate" to="." method="_on_ButtonGenerate_pressed"]
